.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfa__c.object
<CustomObject>
    <description>glfa__c</description>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT((rstkf__glfa_assetno__c &amp; &apos;-&apos; &amp; rstkf__glfa_desc__c), 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_Asset_Value__c</fullName>
        <formula>IF( rstkf__glfa_revaluationval__c =0,(rstkf__glfa_acquisitoinamt__c +  rstkf__glfa_additionamt__c  + rstkf__glfa_totadjup__c - rstkf__glfa_totadjdown__c - rstkf__glfa_totalpartialdisposalamt__c), rstkf__glfa_revaluationval__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes all changes to the Asset&apos;s book value, except Retirement.</inlineHelpText>
        <label>Asset Value (before Retirement)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_acctdatelastdepr__c</fullName>
        <description>glfa_acctdatelastdepr__c</description>
        <inlineHelpText>This is the last accounting date upon which a depreciation transaction was generated.</inlineHelpText>
        <label>Last Depreciation Accounting Date</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_acctdate__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation,Take On Summary Depreciation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_accum_depre_before_retirement__c</fullName>
        <inlineHelpText>Includes all transactions related to accumulated depreciation, except retirement.</inlineHelpText>
        <label>Accum Depre (before Retirement)</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation, Depreciation Clearing, Take On Summary Depreciation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_reference__c</field>
            <operation>notContain</operation>
            <value>Retirement</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_acquisitoinamt__c</fullName>
        <description>glfa_acquisitoinamt__c</description>
        <inlineHelpText>This is the original Acquisition cost / value for the Fixed Asset.</inlineHelpText>
        <label>Acquisition Value</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Acquisition</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_additionamt__c</fullName>
        <description>glfa_additionamt__c</description>
        <inlineHelpText>This is the total value of all additions made to the asset to date.</inlineHelpText>
        <label>Total Additions</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Addition</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_adjacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_adjacct__c</description>
        <label>Adjustment Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Assets (Adjustment Account)</relationshipLabel>
        <relationshipName>glfa5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_adjrevaluationval__c</fullName>
        <formula>(rstkf__glfa_revaluationval__c + rstkf__glfa_totpostadjup__c + rstkf__glfa_postadditionamt__c) - (rstkf__glfa_totpostadjdown__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the current gross value of the revalued asset. It is the sum of the Revaluation Value, Post Revaluation adjustments and additions.</inlineHelpText>
        <label>Adjusted Revaluation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_adjvallessdep__c</fullName>
        <formula>(rstkf__glfa_acquisitoinamt__c + rstkf__glfa_totadjup__c + rstkf__glfa_additionamt__c) - (rstkf__glfa_totadjdown__c + rstkf__glfa_totdepr__c + rstkf__glfa_totalpartialdisposalamt__c + rstkf__glfa_retireamt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is only used with the MACRS depreciation method and represents the MACRS depreciable value as at the beginning of the Fiscal Year.</inlineHelpText>
        <label>Adjusted Value Less Depreciation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_adjvallessresdep__c</fullName>
        <formula>IF (ISPICKVAL(rstkf__glfa_status__c,&apos;Retired&apos;),0,
(rstkf__glfa_acquisitoinamt__c + rstkf__glfa_totadjup__c + rstkf__glfa_additionamt__c) - (rstkf__glfa_totadjdown__c + rstkf__glfa_antresidual__c + rstkf__glfa_totdepr__c + rstkf__glfa_totalpartialdisposalamt__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is only used with the Declining Balance depreciation method and represents the Declining Balance depreciable value as at the beginning of the Fiscal Year.</inlineHelpText>
        <label>Adj Value Less Residual &amp; Depreciation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_adjvallessresid__c</fullName>
        <formula>IF (ISPICKVAL(rstkf__glfa_status__c,&apos;Retired&apos;),0,
(rstkf__glfa_acquisitoinamt__c + rstkf__glfa_totadjup__c + rstkf__glfa_additionamt__c) - (rstkf__glfa_totadjdown__c + rstkf__glfa_antresidual__c + rstkf__glfa_totalpartialdisposalamt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the amount against which depreciation will be charged. It is the sum of the Acquisition value, Additions, Adjustments less the Residual Value.</inlineHelpText>
        <label>Adjusted Value Less Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_antresidual__c</fullName>
        <description>glfa_antresidual__c</description>
        <inlineHelpText>Value of the fixed asset that is expected at the end of its useful life.</inlineHelpText>
        <label>Anticipated Salvage / Residual Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_assetno__c</fullName>
        <description>glfa_assetno__c</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>This is an auto-assigned unique identifier for this fixed asset.</inlineHelpText>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_bookvalue__c</fullName>
        <formula>(rstkf__glfa_acquisitoinamt__c + rstkf__glfa_totadjup__c + rstkf__glfa_additionamt__c) - (rstkf__glfa_totdepr__c + rstkf__glfa_totadjdown__c + rstkf__glfa_retireamt__c + rstkf__glfa_totalpartialdisposalamt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The current Book value of asset taking into account all the asset transactions to date for this Fixed Asset.</inlineHelpText>
        <label>Net Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_budgetamt__c</fullName>
        <inlineHelpText>The Capital Budget amount allocated to this Fixed Asset.</inlineHelpText>
        <label>Budget Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_conventionfctr__c</fullName>
        <formula>IF( AND( OR( ISPICKVAL(rstkf__glfa_deprconvention__c, &apos;Mid Month&apos;),ISPICKVAL(rstkf__glfa_deprconvention__c, &apos;Mid Quarter&apos;),ISPICKVAL(rstkf__glfa_deprconvention__c, &apos;Mid Year&apos;)) , OR((rstkf__glfa_numdepr__c == 0),(rstkf__glfa_numdepr__c = (rstkf__glfa_scheddepevents__c - 1) ) )) , 

0.5, 
1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is set to &apos;0.5&apos; if the Depreciation Convention value is Mid-Month/Mid Quarter/Mid-Year and value of the actual number of depreciation event is equal to &apos;0&apos; or one less than the scheduled depreciation event, otherwise this value is set to &apos;1&apos;.</inlineHelpText>
        <label>Depreciation Convention Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_create_sfa__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create Salesforce Asset?</description>
        <inlineHelpText>Create Salesforce Asset?</inlineHelpText>
        <label>Create Salesforce Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_curdepryear__c</fullName>
        <formula>CEILING((rstkf__glfa_numdepr__c + 1) / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the depreciation year in which the Fixed Asset is currently in. For example, the asset is in year 2 of its 5 year life.</inlineHelpText>
        <label>Current Depreciation Year (SotY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_curdepryearcalc__c</fullName>
        <description>glfa_curdepryearcalc__c</description>
        <label>Current Depreciation Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_curyearsyval__c</fullName>
        <formula>rstkf__glfa_lifeyears__c - rstkf__glfa_curdepryear__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the amount of the depreciation charged to date for the current Fiscal Year.</inlineHelpText>
        <label>Current Depreciation Year Value (SotY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_datebudget__c</fullName>
        <description>glfa_datebudget__c</description>
        <inlineHelpText>The date on which the budget amount for this Fixed Asset was entered / modified.</inlineHelpText>
        <label>Budget Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_datefinaldepr__c</fullName>
        <description>glfa_datefinaldepr__c</description>
        <inlineHelpText>This is a system set value indicating the final depreciation date. This cannot be modified by the user.</inlineHelpText>
        <label>Final Depreciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_dateinservice__c</fullName>
        <description>glfa_dateinservice__c</description>
        <inlineHelpText>Date on which the fixed asset was placed in service.</inlineHelpText>
        <label>In-Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_dateinsuranceval__c</fullName>
        <description>glfa_dateinsuranceval__c</description>
        <inlineHelpText>The date on which the Insurance Value for this Fixed Asset was entered / modified.</inlineHelpText>
        <label>Insurance Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_datelastdepr__c</fullName>
        <description>glfa_datelastdepr__c</description>
        <inlineHelpText>This is the last transaction date upon which a depreciation transaction occurred.</inlineHelpText>
        <label>Last Depreciation Date</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_txndate__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation,Take On Summary Depreciation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_datenextdepr__c</fullName>
        <description>glfa_datenextdepr__c</description>
        <inlineHelpText>This is a system set value indicating the next depreciation date. This cannot be modified by the user.</inlineHelpText>
        <label>Next Depreciation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_datepurch__c</fullName>
        <description>glfa_datepurch__c</description>
        <inlineHelpText>The date on which the fixed asset was purchased or acquired.</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_dateretire__c</fullName>
        <description>glfa_dateretire</description>
        <inlineHelpText>The date on which the Fixed Asset was retired. This is a system set value and cannot be modified by the user.</inlineHelpText>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_datewarrexp__c</fullName>
        <description>glfa_datewarrexp__c</description>
        <inlineHelpText>The date on which the warranty of the fixed asset expires.</inlineHelpText>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_declbal__c</fullName>
        <description>glfa_declbal__c</description>
        <inlineHelpText>The accelerated depreciation factor to be applied to the depreciation rate. Values are 100%, 150%, 200%. This is only applicable when using the depreciation method is “Declining Balance.</inlineHelpText>
        <label>Declining Balance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200%</fullName>
                </value>
                <value>
                    <fullName>150%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_declbalval__c</fullName>
        <formula>CASE(rstkf__glfa_declbal__c, &apos;200%&apos;, 2, &apos;150%&apos;, 1.5, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the value resulting from an internal formula that calculates the declining balance factor value as ‘2’. ‘1.5’ &amp; ‘1’ when the declining balance type is ‘200%’, ‘150%’ &amp; ‘100%’ respectively.</inlineHelpText>
        <label>Declining Balance Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_depacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_depacct__c</description>
        <inlineHelpText>This GL Account stores the asset’s accumulated depreciation amount over the course of the useful life. GL Account with Account Type &apos;Asset&apos; should be used.</inlineHelpText>
        <label>Accumulated Depreciation Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_cmpno__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_glcmp__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Assets (Depreciation Account)</relationshipLabel>
        <relationshipName>glfasdepacct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_deprconvention__c</fullName>
        <inlineHelpText>Determines when &amp; how depreciation is calculated for the year when the fixed asset is acquired and for the year when the fixed asset is disposed of. Values are Mid Month, Full Month, Mid Quarter, Full Quarter, Mid Year and Full Year.</inlineHelpText>
        <label>Depreciation Convention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Month</fullName>
                </value>
                <value>
                    <fullName>Full Quarter</fullName>
                </value>
                <value>
                    <fullName>Full Year</fullName>
                </value>
                <value>
                    <fullName>Mid Month</fullName>
                    <isActive>false</isActive>
                    <label>Mid Month</label>
                </value>
                <value>
                    <fullName>Mid Quarter</fullName>
                    <isActive>false</isActive>
                    <label>Mid Quarter</label>
                </value>
                <value>
                    <fullName>Mid Year</fullName>
                    <isActive>false</isActive>
                    <label>Mid Year</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_deprmethod__c</fullName>
        <description>glfa_deprmethod__c</description>
        <inlineHelpText>Indicates the method used for calculating the asset’s depreciation value. Depreciation methods that can be chosen are Straight Line, Declining Balance, Sum of Years, MACRS (Modified Accelerated Cost Recovery System) and User Defined methods.</inlineHelpText>
        <label>Depreciation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Declining Balance</fullName>
                </value>
                <value>
                    <fullName>Sum of Years</fullName>
                </value>
                <value>
                    <fullName>User Defined</fullName>
                </value>
                <value>
                    <fullName>MACRS</fullName>
                    <isActive>false</isActive>
                    <label>MACRS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_deprvalue__c</fullName>
        <formula>IF((rstkf__glfa_revaluationval__c &gt; 0), 
rstkf__glfa_adjrevaluationval__c - rstkf__glfa_antresidual__c, 
rstkf__glfa_adjvallessresdep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the amount against which depreciation will be charged. It represents the asset cost/value less the residual value.</inlineHelpText>
        <label>Depreciable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_desc__c</fullName>
        <description>glfa_desc__c</description>
        <inlineHelpText>Description of the fixed asset.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfa_dimvals__c</description>
        <label>Dimensions</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_dispacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_dispacct__c</description>
        <inlineHelpText>The GL Account to be used to record the gain/loss on the asset when sold or retired. GL Account with Account Type &apos;Expense&apos; should be used.</inlineHelpText>
        <label>Disposition Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_cmpno__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_glcmp__c</valueField>
            </filterItems>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_type__c</field>
                <operation>equals</operation>
                <value>&apos;Expense&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfadispacct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_estlifeend__c</fullName>
        <description>glfa_estlifeend__c</description>
        <inlineHelpText>The estimated date on which the fixed asset reaches the end of its useful life.  NOTE:  for user input and reference only.</inlineHelpText>
        <label>Estimated End of Life</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_expacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_expacct__c</description>
        <inlineHelpText>This GL Account used to record the depreciation expense after each depreciation cycle. GL Account with Account Type &apos;Expense&apos; should be used.</inlineHelpText>
        <label>Depreciation Expense Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_cmpno__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_glcmp__c</valueField>
            </filterItems>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_type__c</field>
                <operation>equals</operation>
                <value>&apos;Expense&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Assets (Expense Account)</relationshipLabel>
        <relationshipName>glfasexpacct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_faacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_faacct__c</description>
        <inlineHelpText>The GL account that holds the acquisition expense of the fixed asset. GL account with type equal to ‘Asset’ should be used as a Fixed Asset Account. It has a lookup to GL Account.</inlineHelpText>
        <label>Fixed Asset Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>No accounts with this criteria have the Fixed Asset check box selected.</errorMessage>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_cmpno__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_glcmp__c</valueField>
            </filterItems>
            <filterItems>
                <field>rstkf__glacct__c.rstkf__glacct_faacct__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Assets (Fixed Asset Account)</relationshipLabel>
        <relationshipName>glfasfaacct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_geoloc__c</fullName>
        <description>glfa_geoloc__c</description>
        <inlineHelpText>Value of latitude and longitude indicating the real-world geographic location of the fixed asset.</inlineHelpText>
        <label>Geo Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_glcmp__c</description>
        <inlineHelpText>Financial company depreciating this fixed asset. It has a lookup to GL Company. This value cannot be changed once set. If left empty, it defaults to the GL user’s last company.</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_glfaclass__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glfa_glfaclass__c</description>
        <inlineHelpText>Asset class under which the fixed asset exists. It has a lookup to GL fixed asset class. This value cannot be changed once set.</inlineHelpText>
        <label>Asset Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstkf__glfaclass__c.rstkf__glfaclass_glcmp__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_glcmp__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__glfaclass__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_insuranceval__c</fullName>
        <inlineHelpText>Value of the amount that an insurance company will pay when the fixed asset is expected a total loss.</inlineHelpText>
        <label>Insurance Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_lifemonths__c</fullName>
        <description>glfa_lifemonths__c</description>
        <inlineHelpText>This is the number of months that the asset is expected to be of use. Value must be between 1 and 240.</inlineHelpText>
        <label>Depreciation Life (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_lifeyears__c</fullName>
        <formula>FLOOR(rstkf__glfa_lifemonths__c / 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Years over which this Fixed Asset is to be depreciated.</inlineHelpText>
        <label>Asset Life in Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_location__c</fullName>
        <inlineHelpText>The location where the fixed asset is available on hand. It has a user defined pick list values.</inlineHelpText>
        <label>Asset Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_numdepr__c</fullName>
        <description>glfa_numdepr__c</description>
        <inlineHelpText>The total number of times that Alt Book depreciation has been applied to this Fixed Asset.</inlineHelpText>
        <label>Actual Number of Depreciation Events</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_deprmonths__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation,Take On Summary Depreciation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_numdeprcalc__c</fullName>
        <formula>rstkf__glfa_numdepr__c - rstkf__glfa_numpredepr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Depreciations (Calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_numpredepr__c</fullName>
        <description>glfa_numpredepr__c</description>
        <label>Number of Pre-Revaluation Depreciations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfa_pjproj__c</description>
        <inlineHelpText>This is the Project related to this asset. Division must be selected prior to selecting project.</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.  Make sure you have entered a value for Division</errorMessage>
            <filterItems>
                <field>rstk__pjproj__c.rstk__pjproj_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_sydiv__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_postadditionamt__c</fullName>
        <description>glfa_postadditionamt__c</description>
        <inlineHelpText>This is the total value of all additions to the asset since the asset was last revalued.</inlineHelpText>
        <label>Total Post Revaluation Additions</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Post Revaluation Addition</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>